--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-regular-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.12",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.1",
     "@testing-library/user-event": "^12.2.2",
@@ -14,7 +18,7 @@
     "font-awesome-icons": "^1.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.15",
-    "node-sass": "^5.0.0",
+    "node-sass": "^4.14.1",
     "passport": "^0.4.1",
     "passport-google-oauth": "^2.0.0",
     "react": "^17.0.1",
