--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "rebuild": "^0.1.2",
+    "sass": "^1.29.0",
     "serve-favicon": "^2.5.0",
     "web-vitals": "^0.2.4"
   },
