--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "font-awesome": "^4.7.0",
     "font-awesome-icons": "^1.6.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.15",
+    "method-override": "^3.0.0",
+    "mongoose": "^5.10.18",
+    "morgan": "^1.10.0",
     "node-sass": "^4.14.1",
     "passport": "^0.4.1",
     "passport-google-oauth": "^2.0.0",
