--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "font-awesome-icons": "^1.6.0",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
-    "mongoose": "^5.10.18"
+    "mongoose": "^5.10.18",
     "morgan": "^1.10.0",
     "node-sass": "^4.14.1",
     "nodemon": "^2.0.6",
