--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "diverse-city",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
@@ -15,13 +15,12 @@
     "bcrypt": "^5.0.0",
     "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
-    "ejs": "^2.7.4",
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
     "font-awesome-icons": "^1.6.0",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
-    "mongoose": "^5.10.18"
+    "mongoose": "^5.10.18",
     "morgan": "^1.10.0",
     "node-sass": "^4.14.1",
     "nodemon": "^2.0.6",
@@ -36,44 +35,34 @@
     "sass": "^1.29.0",
     "serve-favicon": "^2.5.0",
     "typescript": "^4.1.2",
-    "web-vitals": "^0.2.4"
-  },
+    "web-vitals": "^0.2.4",
+    "serve-favicon": "^2.5.0"
+    },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
+    },
+    "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+    "react-app",
+    "react-app/jest"
     ]
-  },
-  "browserslist": {
+    },
+    "browserslist": {
     "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
     ],
     "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
+    "last 1 chrome version",
+    "last 1 firefox version",
+    "last 1 safari version"
     ]
-  },
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-  "main": "server.js",
-  "devDependencies": {},
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/tiyagallegos/diverse-city.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/tiyagallegos/diverse-city/issues"
-  },
-  "homepage": "https://github.com/tiyagallegos/diverse-city#readme"
-}
+    },
+    "devDependencies": {},
+    "proxy": "http://localhost:3001"
+  }
+  
