--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
     "sass": "^1.29.0",
     "serve-favicon": "^2.5.0",
     "typescript": "^4.1.2",
-    "web-vitals": "^0.2.4",
-    "serve-favicon": "^2.5.0"
+    "web-vitals": "^0.2.4"
     },
   "scripts": {
     "start": "react-scripts start",
